@@ -5,7 +5,9 @@
 	- Move mount.ntfs-fuse and mkfs.ntfs to be symlinks instead of
 	  hardlinks and move both to /sbin rather than prefix/sbin.  Note we
 	  still obey $destdir so building packages works as well as installing
-	  into alternate chroot / other system still works.
+	  into alternate chroot / other system still works.  (Anton)
+	- ntfscmp: fix some corner cases and all memory leaks; handle corrupt
+	  NTFS more gracefully.  (Szaka)
 
 07/10/2005 - 1.12.0 - Lots of fixes and enhancements!
 
